Format using Prettier

--- a/src/global/scss/base/_sanitize.scss
+++ b/src/global/scss/base/_sanitize.scss
@@ -8,7 +8,7 @@
 *,
 ::before,
 ::after {
-    box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 /**
@@ -18,8 +18,8 @@
 
 ::before,
 ::after {
-    text-decoration: inherit; /* 1 */
-    vertical-align: inherit; /* 2 */
+	text-decoration: inherit; /* 1 */
+	vertical-align: inherit; /* 2 */
 }
 
 /**
@@ -33,14 +33,14 @@
   */
 
 html {
-    cursor: default; /* 1 */
-    line-height: 1.5; /* 2 */
-    -moz-tab-size: 4; /* 3 */
-    tab-size: 4; /* 3 */
-    -webkit-tap-highlight-color: transparent /* 4 */;
-    -ms-text-size-adjust: 100%; /* 5 */
-    -webkit-text-size-adjust: 100%; /* 5 */
-    word-break: break-word; /* 6 */
+	cursor: default; /* 1 */
+	line-height: 1.5; /* 2 */
+	-moz-tab-size: 4; /* 3 */
+	tab-size: 4; /* 3 */
+	-webkit-tap-highlight-color: transparent /* 4 */;
+	-ms-text-size-adjust: 100%; /* 5 */
+	-webkit-text-size-adjust: 100%; /* 5 */
+	word-break: break-word; /* 6 */
 }
 
 /* Sections
@@ -51,7 +51,7 @@ html {
   */
 
 body {
-    margin: 0;
+	margin: 0;
 }
 
 /**
@@ -60,8 +60,8 @@ body {
   */
 
 h1 {
-    font-size: 2em;
-    margin: 0.67em 0;
+	font-size: 2em;
+	margin: 0.67em 0;
 }
 
 /* Grouping content
@@ -76,7 +76,7 @@ dl ol,
 dl ul,
 ol dl,
 ul dl {
-    margin: 0;
+	margin: 0;
 }
 
 /**
@@ -87,7 +87,7 @@ ol ol,
 ol ul,
 ul ol,
 ul ul {
-    margin: 0;
+	margin: 0;
 }
 
 /**
@@ -96,8 +96,8 @@ ul ul {
   */
 
 hr {
-    height: 0; /* 1 */
-    overflow: visible; /* 2 */
+	height: 0; /* 1 */
+	overflow: visible; /* 2 */
 }
 
 /**
@@ -105,7 +105,7 @@ hr {
   */
 
 main {
-    display: block;
+	display: block;
 }
 
 /**
@@ -114,8 +114,8 @@ main {
 
 nav ol,
 nav ul {
-    list-style: none;
-    padding: 0;
+	list-style: none;
+	padding: 0;
 }
 
 /**
@@ -124,8 +124,8 @@ nav ul {
   */
 
 pre {
-    font-family: monospace, monospace; /* 1 */
-    font-size: 1em; /* 2 */
+	font-family: monospace, monospace; /* 1 */
+	font-size: 1em; /* 2 */
 }
 
 /* Text-level semantics
@@ -136,7 +136,7 @@ pre {
   */
 
 a {
-    background-color: transparent;
+	background-color: transparent;
 }
 
 /**
@@ -144,8 +144,8 @@ a {
   */
 
 abbr[title] {
-    text-decoration: underline;
-    text-decoration: underline dotted;
+	text-decoration: underline;
+	text-decoration: underline dotted;
 }
 
 /**
@@ -154,7 +154,7 @@ abbr[title] {
 
 b,
 strong {
-    font-weight: bolder;
+	font-weight: bolder;
 }
 
 /**
@@ -165,8 +165,8 @@ strong {
 code,
 kbd,
 samp {
-    font-family: monospace, monospace; /* 1 */
-    font-size: 1em; /* 2 */
+	font-family: monospace, monospace; /* 1 */
+	font-size: 1em; /* 2 */
 }
 
 /**
@@ -174,7 +174,7 @@ samp {
   */
 
 small {
-    font-size: 80%;
+	font-size: 80%;
 }
 
 /* Embedded content
@@ -190,7 +190,7 @@ iframe,
 img,
 svg,
 video {
-    vertical-align: middle;
+	vertical-align: middle;
 }
 
 /**
@@ -199,7 +199,7 @@ video {
 
 audio,
 video {
-    display: inline-block;
+	display: inline-block;
 }
 
 /**
@@ -207,8 +207,8 @@ video {
   */
 
 audio:not([controls]) {
-    display: none;
-    height: 0;
+	display: none;
+	height: 0;
 }
 
 /**
@@ -216,7 +216,7 @@ audio:not([controls]) {
   */
 
 iframe {
-    border-style: none;
+	border-style: none;
 }
 
 /**
@@ -224,7 +224,7 @@ iframe {
   */
 
 img {
-    border-style: none;
+	border-style: none;
 }
 
 /**
@@ -232,7 +232,7 @@ img {
   */
 
 svg:not([fill]) {
-    fill: currentColor;
+	fill: currentColor;
 }
 
 /**
@@ -240,7 +240,7 @@ svg:not([fill]) {
   */
 
 svg:not(:root) {
-    overflow: hidden;
+	overflow: hidden;
 }
 
 /* Tabular data
@@ -251,7 +251,7 @@ svg:not(:root) {
   */
 
 table {
-    border-collapse: collapse;
+	border-collapse: collapse;
 }
 
 /* Forms
@@ -264,7 +264,7 @@ table {
 button,
 input,
 select {
-    margin: 0;
+	margin: 0;
 }
 
 /**
@@ -273,8 +273,8 @@ select {
   */
 
 button {
-    overflow: visible; /* 1 */
-    text-transform: none; /* 2 */
+	overflow: visible; /* 1 */
+	text-transform: none; /* 2 */
 }
 
 /**
@@ -282,10 +282,10 @@ button {
   */
 
 button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
-    -webkit-appearance: button;
+[type='button'],
+[type='reset'],
+[type='submit'] {
+	-webkit-appearance: button;
 }
 
 /**
@@ -294,8 +294,8 @@ button,
   */
 
 fieldset {
-    border: 1px solid #a0a0a0; /* 1 */
-    padding: 0.35em 0.75em 0.625em; /* 2 */
+	border: 1px solid #a0a0a0; /* 1 */
+	padding: 0.35em 0.75em 0.625em; /* 2 */
 }
 
 /**
@@ -303,7 +303,7 @@ fieldset {
   */
 
 input {
-    overflow: visible;
+	overflow: visible;
 }
 
 /**
@@ -312,10 +312,10 @@ input {
   */
 
 legend {
-    color: inherit; /* 2 */
-    display: table; /* 1 */
-    max-width: 100%; /* 1 */
-    white-space: normal; /* 1 */
+	color: inherit; /* 2 */
+	display: table; /* 1 */
+	max-width: 100%; /* 1 */
+	white-space: normal; /* 1 */
 }
 
 /**
@@ -324,8 +324,8 @@ legend {
   */
 
 progress {
-    display: inline-block; /* 1 */
-    vertical-align: baseline; /* 2 */
+	display: inline-block; /* 1 */
+	vertical-align: baseline; /* 2 */
 }
 
 /**
@@ -333,7 +333,7 @@ progress {
   */
 
 select {
-    text-transform: none;
+	text-transform: none;
 }
 
 /**
@@ -343,18 +343,18 @@ select {
   */
 
 textarea {
-    margin: 0; /* 1 */
-    overflow: auto; /* 2 */
-    resize: vertical; /* 3 */
+	margin: 0; /* 1 */
+	overflow: auto; /* 2 */
+	resize: vertical; /* 3 */
 }
 
 /**
   * Remove the padding in IE 10-.
   */
 
-[type="checkbox"],
-[type="radio"] {
-    padding: 0;
+[type='checkbox'],
+[type='radio'] {
+	padding: 0;
 }
 
 /**
@@ -362,9 +362,9 @@ textarea {
   * 2. Correct the outline style in Safari.
   */
 
-[type="search"] {
-    -webkit-appearance: textfield; /* 1 */
-    outline-offset: -2px; /* 2 */
+[type='search'] {
+	-webkit-appearance: textfield; /* 1 */
+	outline-offset: -2px; /* 2 */
 }
 
 /**
@@ -373,7 +373,7 @@ textarea {
 
 ::-webkit-inner-spin-button,
 ::-webkit-outer-spin-button {
-    height: auto;
+	height: auto;
 }
 
 /**
@@ -381,8 +381,8 @@ textarea {
   */
 
 ::-webkit-input-placeholder {
-    color: inherit;
-    opacity: 0.54;
+	color: inherit;
+	opacity: 0.54;
 }
 
 /**
@@ -390,7 +390,7 @@ textarea {
   */
 
 ::-webkit-search-decoration {
-    -webkit-appearance: none;
+	-webkit-appearance: none;
 }
 
 /**
@@ -399,8 +399,8 @@ textarea {
   */
 
 ::-webkit-file-upload-button {
-    -webkit-appearance: button; /* 1 */
-    font: inherit; /* 2 */
+	-webkit-appearance: button; /* 1 */
+	font: inherit; /* 2 */
 }
 
 /**
@@ -408,8 +408,8 @@ textarea {
   */
 
 ::-moz-focus-inner {
-    border-style: none;
-    padding: 0;
+	border-style: none;
+	padding: 0;
 }
 
 /**
@@ -417,7 +417,7 @@ textarea {
   */
 
 :-moz-focusring {
-    outline: 1px dotted ButtonText;
+	outline: 1px dotted ButtonText;
 }
 
 /**
@@ -425,7 +425,7 @@ textarea {
   */
 
 :-moz-ui-invalid {
-    box-shadow: none;
+	box-shadow: none;
 }
 
 /* Interactive
@@ -436,7 +436,7 @@ textarea {
   */
 
 details {
-    display: block;
+	display: block;
 }
 
 /*
@@ -444,25 +444,25 @@ details {
   */
 
 dialog {
-    background-color: white;
-    border: solid;
-    color: black;
-    display: block;
-    height: -moz-fit-content;
-    height: -webkit-fit-content;
-    height: fit-content;
-    left: 0;
-    margin: auto;
-    padding: 1em;
-    position: absolute;
-    right: 0;
-    width: -moz-fit-content;
-    width: -webkit-fit-content;
-    width: fit-content;
+	background-color: white;
+	border: solid;
+	color: black;
+	display: block;
+	height: -moz-fit-content;
+	height: -webkit-fit-content;
+	height: fit-content;
+	left: 0;
+	margin: auto;
+	padding: 1em;
+	position: absolute;
+	right: 0;
+	width: -moz-fit-content;
+	width: -webkit-fit-content;
+	width: fit-content;
 }
 
 dialog:not([open]) {
-    display: none;
+	display: none;
 }
 
 /*
@@ -470,7 +470,7 @@ dialog:not([open]) {
   */
 
 summary {
-    display: list-item;
+	display: list-item;
 }
 
 /* Scripting
@@ -481,7 +481,7 @@ summary {
   */
 
 canvas {
-    display: inline-block;
+	display: inline-block;
 }
 
 /**
@@ -489,7 +489,7 @@ canvas {
   */
 
 template {
-    display: none;
+	display: none;
 }
 
 /* User interaction
@@ -510,8 +510,8 @@ select,
 summary,
 textarea,
 [tabindex] {
-    -ms-touch-action: manipulation; /* 1 */
-    touch-action: manipulation; /* 2 */
+	-ms-touch-action: manipulation; /* 1 */
+	touch-action: manipulation; /* 2 */
 }
 
 /**
@@ -519,7 +519,7 @@ textarea,
   */
 
 [hidden] {
-    display: none;
+	display: none;
 }
 
 /* Accessibility
@@ -529,8 +529,8 @@ textarea,
   * Change the cursor on busy elements in all browsers (opinionated).
   */
 
-[aria-busy="true"] {
-    cursor: progress;
+[aria-busy='true'] {
+	cursor: progress;
 }
 
 /*
@@ -538,7 +538,7 @@ textarea,
   */
 
 [aria-controls] {
-    cursor: pointer;
+	cursor: pointer;
 }
 
 /*
@@ -546,9 +546,9 @@ textarea,
   * inoperable elements in all browsers (opinionated).
   */
 
-[aria-disabled="true"],
+[aria-disabled='true'],
 [disabled] {
-    cursor: not-allowed;
+	cursor: not-allowed;
 }
 
 /*
@@ -556,11 +556,11 @@ textarea,
   * in all browsers (opinionated).
   */
 
-[aria-hidden="false"][hidden] {
-    display: initial;
+[aria-hidden='false'][hidden] {
+	display: initial;
 }
 
-[aria-hidden="false"][hidden]:not(:focus) {
-    clip: rect(0, 0, 0, 0);
-    position: absolute;
+[aria-hidden='false'][hidden]:not(:focus) {
+	clip: rect(0, 0, 0, 0);
+	position: absolute;
 }
