--- a/src/global/stylesheet.scss
+++ b/src/global/stylesheet.scss
@@ -10,8 +10,8 @@
 
 // other
 
-@import "./scss/main.scss";
-@import "./vars.css";
+@import './scss/main.scss';
+@import './vars.css';
 :root {
-    font-family: "Commissioner", sans-serif;
+	font-family: 'Commissioner', sans-serif;
 }
