--- a/src/global/scss/base/_forms.scss
+++ b/src/global/scss/base/_forms.scss
@@ -3,31 +3,31 @@ $_form-box-shadow: inset 0 1px 3px rgba(#000, 0.06);
 $_form-box-shadow-focus: $_form-box-shadow, 0 0 5px rgba($base-color, 0.7);
 
 form {
-    &.inline {
-        display: inline-flex;
-        align-items: center;
-    }
+	&.inline {
+		display: inline-flex;
+		align-items: center;
+	}
 }
 
 fieldset {
-    background-color: transparent;
-    border: 0;
-    margin: 0;
-    padding: 0;
+	background-color: transparent;
+	border: 0;
+	margin: 0;
+	padding: 0;
 }
 
 legend {
-    font-weight: 600;
-    margin-bottom: $small-spacing / 2;
-    padding: 0;
+	font-weight: 600;
+	margin-bottom: $small-spacing / 2;
+	padding: 0;
 }
 
 label {
-    display: block;
-    font-weight: 500;
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    font-variant-caps: all-small-caps;
-    margin-bottom: $small-spacing / 2;
+	display: block;
+	font-weight: 500;
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	font-variant-caps: all-small-caps;
+	margin-bottom: $small-spacing / 2;
 }
 
 // // all text inputs
@@ -105,110 +105,110 @@ label {
 // }
 
 textarea {
-    resize: vertical;
+	resize: vertical;
 }
 
-[type="checkbox"],
-[type="radio"] {
-    display: inline;
-    font-family: initial;
-    margin-right: $small-spacing / 2;
+[type='checkbox'],
+[type='radio'] {
+	display: inline;
+	font-family: initial;
+	margin-right: $small-spacing / 2;
 }
 
-[type="file"] {
-    margin-bottom: $small-spacing;
-    width: 100%;
+[type='file'] {
+	margin-bottom: $small-spacing;
+	width: 100%;
 }
 
 select {
-    font-family: inherit;
-    -webkit-appearance: auto;
-    -moz-appearance: auto;
-    appearance: auto;
-    margin-bottom: $small-spacing;
-    width: auto;
+	font-family: inherit;
+	-webkit-appearance: auto;
+	-moz-appearance: auto;
+	appearance: auto;
+	margin-bottom: $small-spacing;
+	width: auto;
 
-    &:focus {
-        border-color: $base-color;
-        box-shadow: $_form-box-shadow-focus;
-        outline: none;
-    }
+	&:focus {
+		border-color: $base-color;
+		box-shadow: $_form-box-shadow-focus;
+		outline: none;
+	}
 }
 
-input:not([type="range"]) {
-    appearance: none;
-    background: transparent;
-    border: none;
-    outline: none;
-    color: inherit;
-    box-sizing: border-box;
-    padding: 0.6666666667rem;
+input:not([type='range']) {
+	appearance: none;
+	background: transparent;
+	border: none;
+	outline: none;
+	color: inherit;
+	box-sizing: border-box;
+	padding: 0.6666666667rem;
 
-    font-size: 100% !important;
+	font-size: 100% !important;
 }
-input[type="search"]::-webkit-search-decoration,
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-results-button,
-input[type="search"]::-webkit-search-results-decoration {
-    display: none;
+input[type='search']::-webkit-search-decoration,
+input[type='search']::-webkit-search-cancel-button,
+input[type='search']::-webkit-search-results-button,
+input[type='search']::-webkit-search-results-decoration {
+	display: none;
 }
 
 .input {
-    -webkit-appearance: none;
-    // background: #1d242e;
-    color: #fff;
-    border: 0.0625rem solid rgba(170, 170, 170, 0.219);
+	-webkit-appearance: none;
+	// background: #1d242e;
+	color: #fff;
+	border: 0.0625rem solid rgba(170, 170, 170, 0.219);
 
-    -moz-appearance: none;
-    border: 0.0625rem solid rgba(170, 170, 170, 0.219);
-    border-radius: 0.2em;
-    box-shadow: 0.1125em -0.1125em 0.8em 0.25em inset rgba(247, 247, 247, 0.048) !important;
-    width: auto !important;
-    min-width: 40px;
-    transition: all cubic-bezier(0.47, 0, 0.745, 0.715) 0.1s;
+	-moz-appearance: none;
+	border: 0.0625rem solid rgba(170, 170, 170, 0.219);
+	border-radius: 0.2em;
+	box-shadow: 0.1125em -0.1125em 0.8em 0.25em inset rgba(247, 247, 247, 0.048) !important;
+	width: auto !important;
+	min-width: 40px;
+	transition: all cubic-bezier(0.47, 0, 0.745, 0.715) 0.1s;
 
-    &:focus-within {
-        // background: #262e38;
-        background-color: #272b2b86;
+	&:focus-within {
+		// background: #262e38;
+		background-color: #272b2b86;
 
-        transition: all cubic-bezier(0.47, 0, 0.745, 0.715) 0.1s;
-    }
+		transition: all cubic-bezier(0.47, 0, 0.745, 0.715) 0.1s;
+	}
 }
 input {
-    border: 0.0625rem solid rgba(170, 170, 170, 0.219);
-    font-family: inherit;
-    width: auto;
-    height: auto;
-    font-size: 1.25em;
+	border: 0.0625rem solid rgba(170, 170, 170, 0.219);
+	font-family: inherit;
+	width: auto;
+	height: auto;
+	font-size: 1.25em;
 }
 .searchBtn {
-    position: relative;
-    pointer-events: all;
-    cursor: pointer;
-    z-index: 5;
-    width: auto;
-    &::before {
-        padding: 2em;
-    }
-    &::after {
-        cursor: pointer;
-        position: absolute;
+	position: relative;
+	pointer-events: all;
+	cursor: pointer;
+	z-index: 5;
+	width: auto;
+	&::before {
+		padding: 2em;
+	}
+	&::after {
+		cursor: pointer;
+		position: absolute;
 
-        top: 0.12575rem;
-        right: 8%;
-        //   padding: 0.5%;
-        display: inline;
-        bottom: 0;
-        width: auto;
-        height: auto;
-        height: 100%;
+		top: 0.12575rem;
+		right: 8%;
+		//   padding: 0.5%;
+		display: inline;
+		bottom: 0;
+		width: auto;
+		height: auto;
+		height: 100%;
 
-        z-index: 10;
+		z-index: 10;
 
-        content: "›";
-        /* position: relative; */
-        pointer-events: all;
-        font-size: 1.25em;
-        font-weight: 600;
-    }
+		content: '›';
+		/* position: relative; */
+		pointer-events: all;
+		font-size: 1.25em;
+		font-weight: 600;
+	}
 }
