+ Updated Artist Stylesheet.

--- a/src/global/vars.css
+++ b/src/global/vars.css
@@ -1,12 +1,12 @@
 :root {
 	--ytm-bottom: #121018;
-	--ytm-base: #030303;
-	--ytm-top: #030303;
+	--ytm-base: #09090a;
+	--ytm-top: #09090a;
 	--ytm-forms: #12101844;
 	--ytm-side: #1210183a;
 
 	--dark-bottom: #111214;
-	--dark-base: #030303;
+	--dark-base: #09090a;
 	--dark-top: #111214;
 	--dark-forms: #181a1a86;
 	--dark-side: #0b0c0c;
