Cleaned up the lib and component directory. + Working themes & persistant. Desktop and Mobile. + Cleaned up parts of the UI

--- a/src/global/scss/layouts/_header.scss
+++ b/src/global/scss/layouts/_header.scss
@@ -13,7 +13,8 @@ nav.nav {
     // border-bottom: 0.0625rem groove rgb(10, 10, 10);
     padding: 1rem;
     grid-area: n / n / n / n;
-    @media screen and (max-width: 40rem) {
+    @media screen and (min-width: 640px) {
+        grid-template-columns: 1rem auto;
     }
     .nav-item {
         margin-right: 0.5rem;
