--- a/src/global/scss/modules/_dropdown.scss
+++ b/src/global/scss/modules/_dropdown.scss
@@ -1,54 +1,54 @@
 .dd-item {
-	display: flex;
-	flex-direction: row;
-	flex-wrap: nowrap;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
 
-	padding: 0.8em;
-	align-items: center;
-	cursor: pointer;
-	margin: 0;
-	.list-icon {
-		display: inline;
-	}
-	.dd-text {
-		display: inline-block;
-		margin-left: 0.75em;
-		font-size: 1em;
-		white-space: nowrap;
-	}
-	border-bottom: #313338 solid 0.0714rem;
+    padding: 0.5rem;
+    align-items: center;
+    cursor: pointer;
+    margin: 0;
+    .list-icon {
+        display: inline;
+    }
+    .dd-text {
+        display: inline-block;
+        margin-left: 0.75em;
+        font-size: 1em;
+        white-space: nowrap;
+    }
+    border-bottom: #313338 solid 0.0714rem;
 
-	&:hover {
-		background: #313338;
-		transition: cubic-bezier(0.25, 0.46, 0.45, 0.94) all 0.1s;
-	}
+    &:hover {
+        background: #313338;
+        transition: cubic-bezier(0.25, 0.46, 0.45, 0.94) all 0.1s;
+    }
 }
 .dd-menu {
-	position: absolute;
-	right: 0;
-	background: #18191b;
-	outline: 0.0714rem solid rgba(231, 231, 231, 0.329);
-	display: flex;
-	// width: 8rem;
-	top: 0;
-	margin-top: 1.75em;
-	z-index: 1;
-	isolation: isolate;
+    position: absolute;
+    right: 0.9em;
+    background: #18191b;
+    outline: 0.0714rem solid rgba(231, 231, 231, 0.329);
+    display: flex;
+    // width: 8rem;
+    // top: 0;
+    top: 1.8em;
+    z-index: 1;
+    isolation: isolate;
 }
 .dd-player {
-	/* margin-top: 0; */
-	position: fixed;
+    /* margin-top: 0; */
+    position: fixed;
 
-	margin-top: -1.75em;
-	/* position: absolute; */
-	right: 0;
-	background: #18191b;
-	outline: 0.0714rem solid rgba(231, 231, 231, 0.329);
-	/* display: flex; */
-	/* top: 0; */
-	isolation: isolate;
+    margin-top: -1.75em;
+    /* position: absolute; */
+    right: 0;
+    background: #18191b;
+    outline: 0.0714rem solid rgba(231, 231, 231, 0.329);
+    /* display: flex; */
+    /* top: 0; */
+    isolation: isolate;
 
-	transform: translateY(-3.25rem);
-	flex-direction: column;
-	flex-wrap: nowrap;
+    transform: translateY(-3.25rem);
+    flex-direction: column;
+    flex-wrap: nowrap;
 }
