--- a/src/global/scss/base/_typography.scss
+++ b/src/global/scss/base/_typography.scss
@@ -155,6 +155,6 @@ blockquote {
 	font-size: 1.25em;
 	font-style: italic;
 	font-weight: 400;
-	margin: 0 0 $base-spacing/2;
+	margin: 0 0 $base-spacing*0.5;
 	padding-left: 25px;
 }
