--- a/src/global/scss/modules/_dropdown.scss
+++ b/src/global/scss/modules/_dropdown.scss
@@ -25,15 +25,16 @@
 }
 .dd-menu {
     position: absolute;
-    right: 0.9em;
+    right: 0.8em;
     background: #18191b;
     outline: 0.0714rem solid rgba(231, 231, 231, 0.329);
     display: flex;
-    // width: 8rem;
-    // top: 0;
-    top: 1.8em;
+    top: 2rem;
     z-index: 1;
     isolation: isolate;
+    /* position: absolute; */
+    /* flex: none; */
+    flex-direction: row;
 }
 .dd-player {
     /* margin-top: 0; */
