--- a/src/global/scss/base/_fonts.scss
+++ b/src/global/scss/base/_fonts.scss
@@ -1,4 +1,40 @@
-// GLOBAL FONT IMPORTS
-
-@import url(https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap);
-@import url(https://fonts.googleapis.com/css?family=Commissioner:100,200,300,regular,500,600,700,800,900);
+/* commissioner-300 - latin */
+@font-face {
+    font-family: "Commissioner";
+    font-style: normal;
+    font-weight: 300;
+    src: local(""), url("./assets/fonts/commissioner-v5-latin-300.woff2") format("woff2"),
+        /* Chrome 26+, Opera 23+, Firefox 39+ */ url("./assets/fonts/commissioner-v5-latin-300.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+/* commissioner-regular - latin */
+@font-face {
+    font-family: "Commissioner";
+    font-style: normal;
+    font-weight: 400;
+    src: local(""), url("./assets/fonts/commissioner-v5-latin-regular.woff2") format("woff2"),
+        /* Chrome 26+, Opera 23+, Firefox 39+ */ url("./assets/fonts/commissioner-v5-latin-regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+/* commissioner-600 - latin */
+@font-face {
+    font-family: "Commissioner";
+    font-style: normal;
+    font-weight: 600;
+    src: local(""), url("./assets/fonts/commissioner-v5-latin-600.woff2") format("woff2"),
+        /* Chrome 26+, Opera 23+, Firefox 39+ */ url("./assets/fonts/commissioner-v5-latin-600.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+/* commissioner-500 - latin */
+@font-face {
+    font-family: "Commissioner";
+    font-style: normal;
+    font-weight: 500;
+    src: local(""), url("./assets/fonts/commissioner-v5-latin-500.woff2") format("woff2"),
+        /* Chrome 26+, Opera 23+, Firefox 39+ */ url("./assets/fonts/commissioner-v5-latin-500.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+/* commissioner-700 - latin */
+@font-face {
+    font-family: "Commissioner";
+    font-style: normal;
+    font-weight: 700;
+    src: local(""), url("./assets/fonts/commissioner-v5-latin-700.woff2") format("woff2"),
+        /* Chrome 26+, Opera 23+, Firefox 39+ */ url("./assets/fonts/commissioner-v5-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
