--- a/src/global/scss/base/_layout.scss
+++ b/src/global/scss/base/_layout.scss
@@ -23,7 +23,8 @@ body {
 }
 
 :root {
-    font-family: "Commissioner", sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+        "Helvetica Neue", sans-serif;
     word-wrap: break-word;
     // background-color: #0e1117;
     background-color: theme-color("dim", "base");
