--- a/src/global/scss/base/_typography.scss
+++ b/src/global/scss/base/_typography.scss
@@ -3,7 +3,8 @@
 
 body {
     color: $base-font-color;
-    font-family: $base-font-family;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+        "Helvetica Neue", sans-serif;
     font-size: 1rem;
     line-height: 1.5;
 }
@@ -15,7 +16,8 @@ h4,
 h5,
 h6 {
     color: $base-font-color;
-    font-family: $base-font-family;
+    font-family: "Commissioner", sans-serif;
+
     line-height: 1.5;
     font-weight: 500;
     margin: 0 0 $small-spacing;
