--- a/src/global/scss/base/_layout.scss
+++ b/src/global/scss/base/_layout.scss
@@ -23,11 +23,11 @@ body {
 }
 
 :root {
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-		Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+		"Helvetica Neue", sans-serif;
 	word-wrap: break-word;
 	// background-color: #0e1117;
-	background-color: theme-color('dim', 'base');
+	background-color: theme-color("dim", "base");
 	color: rgb(255, 255, 255);
 	scroll-behavior: smooth;
 	-webkit-text-size-adjust: 100%;
@@ -93,9 +93,9 @@ body {
 	position: fixed;
 	display: grid;
 	grid-template-areas:
-		'n n n n'
-		'm m m m'
-		'f f f f';
+		"n n n n"
+		"m m m m"
+		"f f f f";
 	overflow: hidden;
 	width: 100%;
 	grid-template-columns: 16.1255rem 1fr;
@@ -105,14 +105,14 @@ body {
 @media (min-width: 640px) {
 	body {
 		grid-template-areas:
-			'n n n n'
-			's m m m'
-			'f f f f';
+			"n n n n"
+			"s m m m"
+			"f f f f";
 	}
 }
 main {
 	// padding: 0em;
 	margin: 0 auto;
 	padding: 1rem;
-	height: auto;
+	height: 100%;
 }
