--- a/src/app.css
+++ b/src/app.css
@@ -7,59 +7,63 @@
 
 /* commissioner-300 - latin */
 @font-face {
-	font-family: 'Commissioner';
+	font-family: "Commissioner";
 	font-style: normal;
 	font-display: swap;
 	font-weight: 300;
-	src: local(''),
-		url('/assets/fonts/commissioner-v5-latin-300.woff2') format('woff2'),
+	src: local(""),
+		url("/assets/fonts/commissioner-v5-latin-300.woff2") format("woff2"),
 		/* Chrome 26+, Opera 23+, Firefox 39+ */
-			url('/assets/fonts/commissioner-v5-latin-300.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+			url("/assets/fonts/commissioner-v5-latin-300.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 /* commissioner-regular - latin */
 @font-face {
-	font-family: 'Commissioner';
+	font-family: "Commissioner";
 	font-style: normal;
 	font-display: swap;
 	font-weight: 400;
-	src: local(''),
-		url('/assets/fonts/commissioner-v5-latin-regular.woff2') format('woff2'),
+	src: local(""),
+		url("/assets/fonts/commissioner-v5-latin-regular.woff2") format("woff2"),
 		/* Chrome 26+, Opera 23+, Firefox 39+ */
-			url('/assets/fonts/commissioner-v5-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+			url("/assets/fonts/commissioner-v5-latin-regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 /* commissioner-600 - latin */
 @font-face {
-	font-family: 'Commissioner';
+	font-family: "Commissioner";
 	font-style: normal;
 	font-display: swap;
 	font-weight: 600;
-	src: local(''),
-		url('/assets/fonts/commissioner-v5-latin-600.woff2') format('woff2'),
+	src: local(""),
+		url("/assets/fonts/commissioner-v5-latin-600.woff2") format("woff2"),
 		/* Chrome 26+, Opera 23+, Firefox 39+ */
-			url('/assets/fonts/commissioner-v5-latin-600.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+			url("/assets/fonts/commissioner-v5-latin-600.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 /* commissioner-500 - latin */
 @font-face {
-	font-family: 'Commissioner';
+	font-family: "Commissioner";
 	font-style: normal;
 	font-display: swap;
 	font-weight: 500;
-	src: local(''),
-		url('/assets/fonts/commissioner-v5-latin-500.woff2') format('woff2'),
+	src: local(""),
+		url("/assets/fonts/commissioner-v5-latin-500.woff2") format("woff2"),
 		/* Chrome 26+, Opera 23+, Firefox 39+ */
-			url('/assets/fonts/commissioner-v5-latin-500.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+			url("/assets/fonts/commissioner-v5-latin-500.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 /* commissioner-700 - latin */
 @font-face {
-	font-family: 'Commissioner';
+	font-family: "Commissioner";
 	font-display: swap;
 	font-style: normal;
 	font-weight: 700;
-	src: local(''),
-		url('/assets/fonts/commissioner-v5-latin-700.woff2') format('woff2'),
+	src: local(""),
+		url("/assets/fonts/commissioner-v5-latin-700.woff2") format("woff2"),
 		/* Chrome 26+, Opera 23+, Firefox 39+ */
-			url('/assets/fonts/commissioner-v5-latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+			url("/assets/fonts/commissioner-v5-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
 /* OTHERS                           */
 /* ================================ */
+.menuButtons svg circle {
+	box-shadow: 0 0 0.5rem 0.125rem #000;
+	outline: solid #11111161 1px;
+}
