--- a/src/global/scss/base/_forms.scss
+++ b/src/global/scss/base/_forms.scss
@@ -25,7 +25,7 @@ legend {
 label {
 	display: block;
 	font-weight: 500;
-	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 	font-variant-caps: all-small-caps;
 	margin-bottom: $small-spacing * 0.5;
 }
@@ -34,14 +34,14 @@ textarea {
 	resize: vertical;
 }
 
-[type='checkbox'],
-[type='radio'] {
+[type="checkbox"],
+[type="radio"] {
 	display: inline;
 	font-family: initial;
 	margin-right: $small-spacing * 0.5;
 }
 
-[type='file'] {
+[type="file"] {
 	margin-bottom: $small-spacing;
 	width: 100%;
 }
@@ -52,8 +52,7 @@ select {
 	-moz-appearance: auto;
 	appearance: auto;
 	margin-bottom: $small-spacing;
-	width: auto;
-
+	width: 100%;
 	&:focus {
 		border-color: $base-color;
 		box-shadow: $_form-box-shadow-focus;
@@ -61,7 +60,7 @@ select {
 	}
 }
 
-input:not([type='range']) {
+input:not([type="range"]) {
 	appearance: none;
 	background: transparent;
 	border: none;
@@ -72,10 +71,10 @@ input:not([type='range']) {
 
 	font-size: 100% !important;
 }
-input[type='search']::-webkit-search-decoration,
-input[type='search']::-webkit-search-cancel-button,
-input[type='search']::-webkit-search-results-button,
-input[type='search']::-webkit-search-results-decoration {
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration {
 	display: none;
 }
 
@@ -100,7 +99,7 @@ input[type='search']::-webkit-search-results-decoration {
 		transition: all cubic-bezier(0.47, 0, 0.745, 0.715) 0.1s;
 	}
 }
-input :not([type='range']) {
+input :not([type="range"]) {
 	border: 0.0625rem solid rgba(170, 170, 170, 0.219);
 	font-family: inherit;
 	width: auto;
@@ -131,7 +130,7 @@ input :not([type='range']) {
 
 		z-index: 10;
 
-		content: '›';
+		content: "›";
 		/* position: relative; */
 		pointer-events: all;
 		font-size: 1.25em;
