--- a/src/global/scss/base/_layout.scss
+++ b/src/global/scss/base/_layout.scss
@@ -22,11 +22,11 @@ body {
 }
 
 :root {
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-		Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+		"Helvetica Neue", sans-serif;
 	word-wrap: break-word;
 	// background-color: #0e1117;
-	background-color: theme-color('dim', 'base');
+	background-color: theme-color("dim", "base");
 	color: rgb(255, 255, 255);
 
 	-webkit-text-size-adjust: 100%;
@@ -80,11 +80,11 @@ body {
 	}
 }
 
-// body {
-//     margin: 0;
-//     overflow: hidden;
-// }
 body {
+	margin: 0;
+	overflow: hidden;
+}
+.body {
 	grid-template-rows: 4rem auto 4rem;
 	position: fixed;
 	height: 100%;
@@ -94,20 +94,20 @@ body {
 	line-height: 1.5;
 	display: grid;
 	grid-template-areas:
-		'n n n n'
-		'm m m m'
-		'f f f f';
+		"n n n n"
+		"m m m m"
+		"f f f f";
 	grid-template-columns: 16.1255rem 1fr;
 
 	overflow: hidden;
 	max-width: 100%;
 }
 @media (min-width: 640px) {
-	body {
+	.body {
 		grid-template-areas:
-			'n n n n'
-			's m m m'
-			'f f f f';
+			"n n n n"
+			"s m m m"
+			"f f f f";
 	}
 }
 main {
