--- a/src/global/scss/base/_typography.scss
+++ b/src/global/scss/base/_typography.scss
@@ -8,7 +8,7 @@ h4,
 h5,
 h6 {
 	color: $base-font-color;
-	font-family: 'Commissioner', sans-serif;
+	font-family: "Commissioner", sans-serif;
 
 	line-height: 1.5;
 	font-weight: 500;
@@ -71,84 +71,17 @@ a,
 	}
 }
 
-pre {
-	white-space: pre-wrap;
-}
-// code {
-// 	line-height: 1;
-// }
-pre {
-	margin-bottom: 0rem;
-	border: $base-border;
-	background: #1d1f21;
-	color: #c5c8c6;
-	font-family: Consolas, 'Liberation Mono', Menlo, Courier, monospace;
-	word-wrap: normal;
-	overflow-wrap: normal;
-}
-pre code {
-	word-wrap: normal;
-	overflow-wrap: normal;
-}
-pre {
-	margin-bottom: 3rem;
-	padding: 0.75rem;
-	background: #1d1f21;
-	color: #c5c8c6;
-}
-pre code {
-	word-wrap: normal;
-}
 strong,
 em,
 small,
 code,
 hr {
-	line-height: 1;
+	line-height: 1.25;
 }
 code,
 kbd,
 pre,
 samp {
-	font-family: Consolas, 'Liberation Mono', Menlo, Courier, monospace;
+	font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
 	font-size: 1em;
-}
-pre {
-	padding: 0.75rem;
-	background: #1d1f21;
-	color: #c5c8c6;
-	font-size: 1rem;
-	line-height: 1.5;
-	word-wrap: break-word;
-}
-pre::first-line {
-	font-size: 1;
-}
-.hljs-string {
-	color: #b5bd68;
-}
-.hljs-keyword {
-	color: #81a2be;
-}
-.example + pre {
-	margin-bottom: 3rem;
-}
-
-hr {
-	margin: $base-spacing 0;
-	border-bottom: $base-border;
-	border-left: none;
-	border-right: none;
-	border-top: none;
-	color: #c5c8c6;
-}
-
-blockquote {
-	border-left: 0.25rem solid $primary-color;
-	font-family: Georgia, Times, 'Times New Roman', serif;
-	font-size: 1.25em;
-	font-style: italic;
-	font-weight: 400;
-	margin: 0 0 $base-spacing * 0.5;
-	padding-left: 25px;
 }
