--- a/src/global/stylesheet.scss
+++ b/src/global/stylesheet.scss
@@ -1,17 +1,2 @@
-// // utils
-// @import './styles/mixins';
-
-// @import './base/base';
-
-// // main styles
-// @import "./styles/main";
-// @import "./styles/video";
-// @import "./styles/item";
-
-// other
-
-@import './scss/main.scss';
-@import './vars.css';
-:root {
-	font-family: 'Commissioner', sans-serif;
-}
+@import "./scss/main.scss";
+@import "./vars.css";
