Begin Refactor - Changed Overflow menu - Style updates - Begin optimizations

--- a/src/global/scss/base/_base.scss
+++ b/src/global/scss/base/_base.scss
@@ -2,13 +2,12 @@
 // Al rules applied to an element using an element selector, a descendent selector, or a child selector, along with any pseudo-classes.
 // Typically, no Class or ID selectors live within these files
 // @import "reset";
-@import 'sanitize';
-@import 'fonts';
-@import 'animations';
-@import 'colors';
-@import 'forms';
-@import 'layout';
-@import 'lists';
-@import 'media';
-@import 'tables';
-@import 'typography';
+@import "sanitize";
+@import "fonts";
+@import "animations";
+@import "colors";
+@import "forms";
+@import "layout";
+@import "lists";
+@import "media";
+@import "typography";
