--- a/src/global/scss/base/_typography.scss
+++ b/src/global/scss/base/_typography.scss
@@ -8,7 +8,7 @@ h4,
 h5,
 h6 {
 	color: $base-font-color;
-	font-family: "Commissioner", sans-serif;
+	font-family: 'Commissioner', sans-serif;
 
 	line-height: 1.5;
 	font-weight: 500;
