--- a/src/global/scss/layouts/_header.scss
+++ b/src/global/scss/layouts/_header.scss
@@ -55,5 +55,14 @@ nav.nav {
 	background: fixed;
 	background-color: inherit;
 	&::before {
+		background: #111214;
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		width: 100%;
+		content: "";
+		z-index: -1;
 	}
 }
